upgpkg: koffice 2.1.1-2 exiv2 0.19 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@71786 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/koffice/trunk/PKGBUILD
+++ b/koffice/trunk/PKGBUILD
@@ -28,7 +28,7 @@ pkgname=('koffice-interfaces'
 	'koffice-tools'
 	'koffice-thesaurus-doc')
 pkgver=2.1.1
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url='http://koffice.kde.org'
 license=('GPL' 'LGPL' 'FDL')
@@ -36,23 +36,23 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'eigen' \
   'kdelibs' 'gsl' 'qca' 'lcms' 'glew' 'qimageblitz' \
   'kdepimlibs' 'pstoedit' 'wv2' 'poppler-qt' 'libwpd' 'openexr' 'opengtl')
 groups=('koffice')
-source=("http://download.kde.org/stable/koffice-${pkgver}/koffice-${pkgver}.tar.bz2"
+source=("http://download.kde.org/stable/${pkgbase}-${pkgver}/${pkgbase}-${pkgver}.tar.bz2"
 	'libpng14.patch')
 md5sums=('9955f30f43ed3f6970870f55015a1a18'
          '8f139e0be95f3566cb860bd384c5aa8a')
 
 build() {
-	cd ${srcdir}/koffice-${pkgver}
+	cd ${srcdir}/${pkgbase}-${pkgver}
 
 	# buildtime patch
   	patch -Np0 -i ${srcdir}/libpng14.patch || return 1
-	        
-	mkdir ../build
-	cd ../build
-	cmake ../koffice-${pkgver} \
+	
+	cd ${srcdir}
+	mkdir build
+	cd build
+	cmake ../${pkgbase}-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_SKIP_RPATH=ON \
-		-DCMAKE_{SHARED,MODULE,EXE}_LINKER_FLAGS='-Wl,--no-undefined -Wl,--as-needed' \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make || return 1
 }
@@ -235,4 +235,3 @@ package_koffice-thesaurus-doc(){
 	cd ${srcdir}/build/doc/thesaurus
         make DESTDIR=${pkgdir} install
 }
-	
