--- a/scrot/trunk/PKGBUILD
+++ b/scrot/trunk/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=scrot
 pkgver=0.8
-pkgrel=3
+pkgrel=4
 pkgdesc="A simple command-line screenshot utility for X"
 arch=('i686' 'x86_64')
-url="http://freshmeat.net/projects/scrot/"
+url="http://scrot.sourcearchive.com/"
 license=('MIT')
 depends=('giblib')
 source=(ftp://ftp.archlinux.org/other/scrot/${pkgname}-${pkgver}.tar.bz2)
