upgpkg: aif 2010.03.09-1 New AIF version. now with [opt]depends for everything it needs. (also what's in base group. see http://mailman.archlinux.org/pipermail/arch-releng/2009-November/000790.html + conversion to any-package
git-svn-id: file:///srv/repos/svn-packages/svn@71818 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aif/trunk/PKGBUILD
+++ b/aif/trunk/PKGBUILD
@@ -2,16 +2,26 @@
 # Maintainer: Dieter Plaetinck <dieter@plaetinck.be>
 
 pkgname=aif
-pkgver=2009.08.07
+pkgver=2010.03.09
 pkgrel=1
 pkgdesc="The ArchLinux Installation Framework"
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://projects.archlinux.org/?p=aif.git;a=summary"
 license=('GPL3')
-depends=('bash' 'pacman')
-optdepends=('markdown: to generate the html installation guide')
-source=(http://ftp.archlinux.org/other/aif/aif-$pkgver.tar.gz)
-md5sums=('b8d76716f85a4f7ec56dc0c195833ce5')
+depends=('bash' 'pacman' 'coreutils' 'grub' 'grep' 'mkinitcpio' 'awk' 'sed')
+optdepends=('markdown: to generate the html installation guide'
+            'cryptsetup: for encryption support'
+            'lvm2: for LVM support'
+            'dhcpd: for dhcp networking support'
+            'e2fsprogs: Ext support'
+            'jfsutils: JFS support'
+            'reiserfsprogs: ReiserFS support'
+            'xfsprogs: XFS support'
+            'ntp: setting date with NTP'
+            'dialog: for ncurses support'
+            )
+source=(ftp://ftp.archlinux.org/other/aif/aif-$pkgver.tar.gz)
+md5sums=('f062d5dfca27475c627c6fcd5813ef88')
 
 build() {
 
