--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,6 +11,9 @@ license=('GPL')
 backup=(etc/pacman.d/mirrorlist)
 source=(mirrorlist)
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 # NOTE on building this package:
 # * Go to the trunk/ directory
 # * Run bash -c ". PKGBUILD; updatelist"
