keep an upgrade path for older installations
git-svn-id: file:///srv/repos/svn-packages/svn@71826 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/pacman-mirrorlist/trunk/PKGBUILD
+++ b/pacman-mirrorlist/trunk/PKGBUILD
@@ -11,6 +11,9 @@ license=('GPL')
 backup=(etc/pacman.d/mirrorlist)
 source=(mirrorlist)
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 # NOTE on building this package:
 # * Go to the trunk/ directory
 # * Run bash -c ". PKGBUILD; updatelist"
