upgpkg: openssh 5.4p1-1 minor cleanup; upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@71828 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openssh/trunk/PKGBUILD
+++ b/openssh/trunk/PKGBUILD
@@ -3,24 +3,24 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=openssh
-pkgver=5.3p1
-pkgrel=4
+pkgver=5.4p1
+pkgrel=1
 #_gsskexver=20080404
 pkgdesc='A Secure SHell server/client'
 arch=('i686' 'x86_64')
 license=('custom')
 url="http://www.openssh.org/portable.html"
 backup=('etc/ssh/ssh_config' 'etc/ssh/sshd_config' 'etc/pam.d/sshd')
-depends=('openssl>=0.9.8k' 'zlib' 'pam' 'tcp_wrappers' 'heimdal>=1.3.1')
-source=(ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz
-        sshd sshd.confd sshd.pam)
-        #http://www.sxw.org.uk/computing/patches/${pkgname}-${pkgver}-gsskex-$_gsskexver.patch
-md5sums=('13563dbf61f36ca9a1e4254260131041' '4ac6786894a8a95cf5e57f060240de55'
-         'e2cea70ac13af7e63d40eb04415eacd5' '1c7c2ea8734ec7e3ca58d820634dc73a')
+depends=('openssl' 'zlib' 'pam' 'tcp_wrappers' 'heimdal')
+source=("ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"
+        'sshd' 'sshd.confd' 'sshd.pam')
+md5sums=('da10af8a789fa2e83e3635f3a1b76f5e'
+         'e8a3b7a3e3ace43eeb1f28a7c93fa15d'
+         'e2cea70ac13af7e63d40eb04415eacd5'
+         '1c7c2ea8734ec7e3ca58d820634dc73a')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  #patch -up0 < ${srcdir}/${pkgname}-${pkgver}-gsskex-$_gsskexver.patch
 
   #NOTE we disable-strip so that makepkg can decide whether to strip or not
   ./configure --prefix=/usr --libexecdir=/usr/lib/ssh \
@@ -29,6 +29,10 @@ build() {
     --with-xauth=/usr/bin/xauth --with-kerberos5=/usr --with-ssl-engine \
     --disable-strip
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
 
   install -Dm755 ${srcdir}/sshd ${pkgdir}/etc/rc.d/sshd
