--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,19 +3,22 @@
 # Contributor: nesl247 <nesl247@gmail.com>
 
 pkgname=pycups
-pkgver=1.9.48
+pkgver=1.9.49
 pkgrel=1
 pkgdesc="Python CUPS Bindings"
 url="http://cyberelk.net/tim/software/pycups/"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libcups' 'python')
-source=(http://cyberelk.net/tim/data/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('2e9ed692c75328e7fb88f8c230f70990')
+source=("http://cyberelk.net/tim/data/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('6db9d8bc7f40315bc0b93f210737cc82')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-
   make || return 1
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install || return 1
 }
