--- a/system-config-printer/trunk/PKGBUILD
+++ b/system-config-printer/trunk/PKGBUILD
@@ -4,16 +4,15 @@
 pkgbase=system-config-printer
 pkgname=('system-config-printer-common'
 	'system-config-printer-gnome')
-#	'system-config-printer-udev)
-pkgver=1.1.16
+pkgver=1.1.18
 pkgrel=1
 pkgdesc="A CUPS printer configuration tool and status applet"
 url="http://cyberelk.net/tim/software/system-config-printer/"
 arch=('any')
 license=('GPL')
-makedepends=('intltool' 'python' 'xmlto' 'docbook-xsl' 'desktop-file-utils' 'libcups' 'libxml2') # libusb with system-config-printer-udev
-source=(http://cyberelk.net/tim/data/${pkgbase}/1.1/${pkgbase}-${pkgver}.tar.bz2)
-md5sums=('22394a052fa730a890f6bfea1aec0aa2')
+makedepends=('intltool' 'python' 'xmlto' 'docbook-xsl' 'desktop-file-utils' 'libcups' 'libxml2')
+source=("http://cyberelk.net/tim/data/${pkgbase}/1.1/${pkgbase}-${pkgver}.tar.bz2")
+md5sums=('073788462a8122f4b3c9ad31465c61be')
 
 build() {
   cd ${srcdir}/${pkgbase}-${pkgver}
@@ -30,7 +29,6 @@ package_system-config-printer-common() {
   depends=('pycups' 'dbus-python' 'pysmbc')
   optdepends=('system-config-printer-gnome: for the GTK frontend'
 	'kdeadmin-system-config-printer-kde: for the administration tool in KDE System Settings')
-#	'system-config-printer-udev: for automatic disabling/enabling when printer is connected')
   replaces=('system-config-printer')
   provides=("system-config-printer=$pkgver")
   conflicts=('system-config-printer')
@@ -85,16 +83,3 @@ package_system-config-printer-gnome() {
   rm ${pkgdir}/etc/dbus-1/system.d/newprinternotification.conf || return 1
   rm -r ${pkgdir}/usr/lib/python2.6/site-packages/cupshelpers/ || return 1
 }
-
-#package_system-config-printer-udev() {
-#  pkgdesc='A CUPS printer configuration tool and status applet - udev rules for auto-setup'
-#  depends=('udev' 'libusb' 'system-config-printer-common')
-#
-#  cd ${srcdir}/${pkgbase}-${pkgver}/udev
-#  install -d ${pkgdir}/lib/udev/rules.d
-#  gcc -o udev-configure-printer udev-configure-printer.c || return 1
-#  install -m755 udev-{add,configure}-printer \
-#    ${pkgdir}/lib/udev || return 1
-#  install -m644 70-printers.rules \
-#    ${pkgdir}/lib/udev/rules.d || return 1
-#}
