upgpkg: papyon 0.4.5-1 update to 0.4.5
git-svn-id: file:///srv/repos/svn-packages/svn@71844 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/papyon/trunk/PKGBUILD
+++ b/papyon/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
-# Maintainer: Biru Ionut <biru.ionut at gmail.com>
+# Maintainer: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=papyon
-pkgver=0.4.4
+pkgver=0.4.5
 pkgrel=1
 pkgdesc="papyon is the library behind the msn connection manager : telepathy-butterfly."
 arch=('any')
@@ -11,9 +11,9 @@ license=("GPL")
 depends=('pygobject' 'pyopenssl')
 provides=('pymsn')
 source=(http://telepathy.freedesktop.org/releases/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('e7ff99e831aa33a7c5721081718c8698')
+sha256sums=('51d075b74c2264c382da379db0a5b05f6b34a72cfe9b788b33de28f08340b152')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
-  python setup.py install --root=$pkgdir || return 1
+  cd "$srcdir/$pkgname-$pkgver"
+  python setup.py install --root="$pkgdir" --optimize=1 || return 1
 }
