--- a/python-telepathy/trunk/PKGBUILD
+++ b/python-telepathy/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
-# Maintainer: Biru Ionut <ionut@archlinux.ro>
+# Maintainer:  Ionut Biru <ibiru@archlinux.org>
 # Contributor: Daniel Balieiro <daniel@balieiro.com>
 pkgname=python-telepathy
-pkgver=0.15.15
+pkgver=0.15.16
 pkgrel=1
 pkgdesc="Python libraries for use in Telepathy clients and connection managers"
 arch=('i686' 'x86_64')
@@ -11,11 +11,11 @@ license=('LGPL')
 depends=('dbus-python')
 makedepends=('libxslt')
 source=(http://telepathy.freedesktop.org/releases/telepathy-python/telepathy-python-$pkgver.tar.gz)
+sha256sums=('3cb2c3efae570ab10761445f49be34b458223eb720a4dcc3f700a2c91845c627')
 
 build() {
-    cd $srcdir/telepathy-python-$pkgver
+    cd "$srcdir/telepathy-python-$pkgver"
     ./configure --prefix=/usr
     make || return 1
-    make DESTDIR=$pkgdir install || return 1
+    make DESTDIR="$pkgdir" install || return 1
 }
-md5sums=('714fac03ff1386092f209f7ec398d261')
