--- a/telepathy-butterfly/trunk/PKGBUILD
+++ b/telepathy-butterfly/trunk/PKGBUILD
@@ -1,21 +1,21 @@
 # $Id$
-# Maintainer:  Biru Ionut <ionut@archlinux.ro>
+# Maintainer:  Ionut Biru <ibiru@archlinux.org>
 # Contributor: Daniel Balieiro <daniel@balieiro.com>
 pkgname=telepathy-butterfly
-pkgver=0.5.4
+pkgver=0.5.5
 pkgrel=1
 pkgdesc="A MSN connection manager for Telepathy"
 arch=('i686' 'x86_64')
 url="http://telepathy.freedesktop.org"
 groups=('telepathy')
 license=('GPL')
-depends=('papyon>=0.4.4' 'python-telepathy>=0.15.14')
+depends=('papyon>=0.4.4' 'python-telepathy>=0.15.16')
 source=(http://telepathy.freedesktop.org/releases/telepathy-butterfly/telepathy-butterfly-$pkgver.tar.gz)
+sha256sums=('db191897cd84b35a9a49a8c203328f757ee20b15ca3216e7bdafab67e54c9dbb')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "$srcdir/$pkgname-$pkgver"
   ./configure --prefix=/usr --libexecdir=/usr/lib/telepathy
   make || return 1
-  make DESTDIR=$pkgdir install || return 1
+  make DESTDIR="$pkgdir" install || return 1
 }
-md5sums=('3cedf582597ebe742fe7c05fc6ec8943')
