--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 # Maintainer: Aaron Griffin <aaron@archlinux.org>
 pkgname=libarchive
-pkgver=2.8.0
+pkgver=2.8.1
 pkgrel=1
 pkgdesc="library that can create and read several streaming archive formats"
 arch=(i686 x86_64)
@@ -34,4 +34,5 @@ package() {
   install -m644 COPYING $startdir/pkg/usr/share/licenses/libarchive/
 }
 
-md5sums=('400fd9ba51fffe6c65c75387fffba9d9')
+md5sums=('0defc177cba76a3d325be25802865b54')
+sha256sums=('bb15c5694c2d7909b235a88c8c4fc5f5beb01931db77981e815da2dfa564a1ca')
