--- a/at-spi/trunk/PKGBUILD
+++ b/at-spi/trunk/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jan de Groot <jan@archlinux.org>
 
 pkgname=at-spi
-pkgver=1.29.90
+pkgver=1.29.92
 pkgrel=1
 pkgdesc="Assistive Technology Service Provider Interface"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libbonobo>=2.24.2' 'libxtst' 'gtk2>=2.19.5' 'gconf>=2.28.0')
+depends=('libbonobo>=2.24.2' 'libxtst' 'gtk2>=2.19.7' 'gconf>=2.28.0')
 makedepends=('pkgconfig' 'python' 'intltool')
 options=('!libtool')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.29/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('a2e639d21294cdbd5e9f651754eb16625a331650a37a9ff7b7a4c903d5755b9c')
+sha256sums=('d5d6fdcb22d53188a9967218dfc57c39e006ac0ab2e09357bee729a9d51555cb')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
