--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=evolution-data-server
-pkgver=2.29.91
+pkgver=2.29.92
 pkgrel=1
 pkgdesc="Evolution Data Server provides a central location for addressbook and calendar in the GNOME Desktop"
 arch=(i686 x86_64)
-depends=('libsoup>=2.29.91' 'nss>=3.12.4' 'libgnome-keyring>=2.29.4' 'heimdal>=1.3.1' 'libgweather>=2.29.91' 'libical>=0.44' 'db>=4.8.26')
-makedepends=('intltool' 'pkgconfig' 'gtk-doc')
+depends=('libsoup>=2.29.91' 'nss>=3.12.4' 'libgnome-keyring>=2.29.4' 'heimdal>=1.3.1' 'libgweather>=2.29.92' 'libical>=0.44' 'db>=4.8.26')
+makedepends=('intltool' 'pkgconfig' 'gtk-doc' 'gperf')
 options=('!libtool')
 url="http://www.gnome.org"
 license=('GPL')
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2
         patch-camel_camel-sasl-gssapi.c)
-sha256sums=('bbb5533fa2281d06fab91a371ccd565504f9b79c6fb67d905a53aba626907c4f'
+sha256sums=('9c82d80b65f44459de004430948a072e85cfb8538923ad24a741747c79f850e7'
             '7a16a8e040a9623a56d05754b5a23d969d12e1c2098eb7baec48e935a43832b4')
 
 build() {
