--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=gdm
-pkgver=2.29.6
+pkgver=2.29.92
 pkgrel=1
 pkgdesc="Gnome Display Manager (a reimplementation of xdm)"
 arch=(i686 x86_64)
@@ -10,8 +10,8 @@ url="http://www.gnome.org"
 backup=('etc/pam.d/gdm' 'etc/pam.d/gdm-autologin' 'etc/gdm/custom.conf')
 groups=('gnome-extra')
 options=('!libtool')
-depends=('libcanberra>=0.21' 'libxklavier>=5.0' 'tcp_wrappers' 'gnome-session>=2.29.6' 'devicekit-power>=013')
-makedepends=('intltool' 'gnome-doc-utils>=0.18.0' 'xorg-server' 'gnome-panel>=2.29.6')
+depends=('libcanberra>=0.23' 'libxklavier>=5.0' 'tcp_wrappers' 'gnome-session>=2.29.92' 'upower>=0.9.1')
+makedepends=('intltool' 'gnome-doc-utils>=0.18.0' 'xorg-server' 'gnome-panel>=2.29.92')
 optdepends=('gnome-panel: needed for user switch applet')
 conflicts=('fast-user-switch-applet')
 replaces=('fast-user-switch-applet')
@@ -21,12 +21,11 @@ source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgv
         gdm.pam
         gdm-autologin.pam
         gdm)
-sha256sums=('86d5d8a8410a6f8fc0e9668f1bef4f9b5ced38df9879dd6dd913874f66f9f90f'
-            'd41b0945a3db78a06b5aa4101f5515f7ea5d57e70974681c23e5def1df1834bb'
+sha256sums=('604e30596f9bf52b42822707ba2ce16a0c6b5c79fd5c9448463eee1803f431e8'
+            '1c494fbd9a03a29ee94ba180e79a2a9fc3d11516bf5767faa53230c5939b8e09'
             'f1dfa4d88288d4b0a631a68a51b46c2da537bee8fe5a99f9f288c8ff75a50b19'
             '3daff680ff6b7ea56f84f40843e46e72477c81e9e405028203c942af04d07ae5'
             '272c08d8e8b50bf424d0705ac864d4c18c47ec4f6893b1af732c2efbc86c9550')
-
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
