update to gnome 2.30rc
git-svn-id: file:///srv/repos/svn-packages/svn@71963 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gir-repository/trunk/PKGBUILD
+++ b/gir-repository/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Lucas Hermann Negri <kkndrox@gmail.org>
 # Contributor: Valeriy Lyasotskiy <onestep@ukr.net>
 
-_gitdate=20100201
+_gitdate=20100311
 pkgname=gir-repository
 pkgver=0.6.6
 pkgrel=0.${_gitdate}
@@ -13,12 +13,12 @@ depends=('gobject-introspection' 'dbus-glib')
 makedepends=('poppler-glib' 'gconf' 'libsoup' 'nautilus' 'libgnome-keyring' 'libnotify' 'gtksourceview2' 'vte' 'gnome-menus' 'libwnck')
 url="http://live.gnome.org/GObjectIntrospection/" 
 options=('!libtool')
-source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${_gitdate}.tar.bz2)
-md5sums=('ab4d7425686c4e1ab0dd780e7a6468a8')
+source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${_gitdate}.tar.gz)
+md5sums=('6478def13f548a3a2fcd97cf460f991d')
 
-build() { 
+build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr --disable-static --with-skipped-gir-modules=Pango,Atk,Gtk,PangoXft,Babl,Unique || return 1
+  ./configure --prefix=/usr --disable-static --with-skipped-gir-modules=Pango,Atk,Gtk,PangoXft,Babl,Unique,GMenu,Wnck || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install
 }
