--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Jan de Groot <jan@archlinux.org>
 
 pkgname=gnome-menus
-pkgver=2.29.91
+pkgver=2.29.92
 pkgrel=1
 pkgdesc="GNOME menu specifications"
 arch=(i686 x86_64)
 depends=('pygtk>=2.16.0')
-makedepends=('pkgconfig' 'intltool')
+makedepends=('pkgconfig' 'intltool' 'gobject-introspection')
 options=('!libtool' '!makeflags')
 license=('GPL' 'LGPL')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2
         menus.patch)
-sha256sums=('3bef3e726fcff54297b0eb0283c3762872de8a0e2dff8df43a74e3928fb39a42'
+sha256sums=('ae0d985ad406e22cb9427d292b759bb160098a6f857b97453d23985b84d12bf1'
             'df2779777906b038fa911dc745534564ede9524a64ab368e2f6f8e38d54e7acc')
 
 build() {
