update to gnome 2.30rc
git-svn-id: file:///srv/repos/svn-packages/svn@72013 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-power-manager/trunk/PKGBUILD
+++ b/gnome-power-manager/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=gnome-power-manager
 pkgver=2.29.91
-pkgrel=1
+pkgrel=2
 pkgdesc="Session daemon that makes it easy to manage your laptop or desktop system."
 arch=(i686 x86_64)
 url="http://www.gnome.org/projects/gnome-power-manager/"
 license=('GPL')
-depends=('libnotify>=0.4.5' 'libunique>=1.1.6' 'libcanberra>=0.23' 'hicolor-icon-theme' 'devicekit-power>=012' 'libgnome-keyring>=2.29.4')
-makedepends=('intltool' 'pkgconfig' 'gnome-doc-utils>=0.19.5' 'gnome-panel>=2.29.91')
+depends=('libnotify>=0.4.5' 'libunique>=1.1.6' 'libcanberra>=0.23' 'hicolor-icon-theme' 'upower>=0.9.1' 'libgnome-keyring>=2.29.4')
+makedepends=('intltool' 'pkgconfig' 'gnome-doc-utils>=0.19.5' 'gnome-panel>=2.29.92')
 optdepends=('gnome-panel')
 options=(!emptydirs)
 install=gnome-power-manager.install
