--- a/gnome-screensaver/trunk/PKGBUILD
+++ b/gnome-screensaver/trunk/PKGBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-screensaver
-pkgver=2.29.91
+pkgver=2.29.92
 pkgrel=1
 pkgdesc="Screensaver designed to integrate well with the GNOME desktop."
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
 url="http://live.gnome.org/GnomeScreensaver"
 backup=(etc/pam.d/gnome-screensaver)
-depends=('gnome-menus>=2.29.6' 'libgnomekbd>=2.29.5' 'libgl' 'libnotify>=0.4.5' 'gnome-desktop>=2.29.90' 'libxxf86misc')
+depends=('gnome-menus>=2.29.92' 'libgnomekbd>=2.29.92' 'libgl' 'libnotify>=0.4.5' 'gnome-desktop>=2.29.92' 'libxxf86misc')
 makedepends=('pkgconfig' 'intltool' 'mesa' 'xscreensaver' 'libxss' 'libxslt')
 optdepends=('xscreensaver')
 groups=('gnome')
@@ -17,7 +17,7 @@ options=(!emptydirs)
 install=gnome-screensaver.install
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2
 	      gnome-screensaver.pam)
-sha256sums=('47084e73fa28fae5ecae2b1c8c137769c911142f56be7e1c223f5372886a47c3'
+sha256sums=('aca3d7fa53f13b6cc8d13d36336c949eaf72b15d5edad4f63e938109a5d120d4'
             '2744d1fc39da46fc681b7cf1c9230d2035b2bb8d9f510213fbe439c114eb76a2')
 
 build() {
