--- a/gnome-terminal/trunk/PKGBUILD
+++ b/gnome-terminal/trunk/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-terminal
-pkgver=2.29.6
+pkgver=2.29.92
 pkgrel=1
 pkgdesc="The GNOME Terminal Emulator"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
 depends=('gconf>=2.28.0' 'vte>=0.23.5' 'libgnome' 'libsm')
-makedepends=('pkgconfig' 'gnome-doc-utils>=0.18.0' 'intltool') 
+makedepends=('pkgconfig' 'gnome-doc-utils>=0.19.5' 'intltool') 
 options=('!emptydirs')
 url="http://www.gnome.org"
 groups=('gnome-extra')
 install=gnome-terminal.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('3a1083a67b6ddbec33aa36991c2e47ef6301ec343f24fa43247b028b0d00d669')
+sha256sums=('854b4b14ff782a50667d5adcd5fae14e0209abd2c887faac201569203f8fa718')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
