--- a/gtk2/trunk/PKGBUILD
+++ b/gtk2/trunk/PKGBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gtk2
-pkgver=2.19.6
+pkgver=2.19.7
 pkgrel=1
 pkgdesc="The GTK+ Toolkit (v2)"
 arch=(i686 x86_64)
 url="http://www.gtk.org/"
 install=gtk2.install
-depends=('atk>=1.29.4-2' 'pango>=1.27.1' 'libxcursor' 'libxinerama' 'libxrandr>=1.3.0' 'libxi>=1.2.1' 'libxcomposite' 'libxdamage' 'heimdal>=1.3.1' 'gnutls>=2.8.3' 'shared-mime-info' 'cairo>=1.8.8-2' 'libtiff>=3.9.2-2' 'libcups>=1.4.2-3')
+depends=('atk>=1.29.92' 'pango>=1.27.1' 'libxcursor' 'libxinerama' 'libxrandr>=1.3.0' 'libxi>=1.2.1' 'libxcomposite' 'libxdamage' 'heimdal>=1.3.1' 'gnutls>=2.8.3' 'shared-mime-info' 'cairo>=1.8.10' 'libtiff>=3.9.2-2' 'libcups>=1.4.2-3')
 makedepends=('pkgconfig' 'gtk-doc' 'gobject-introspection')
 replaces=('gtkprint-cups' 'gail')
 conflicts=('gtkprint-cups' 'gail')
@@ -18,7 +18,7 @@ backup=(etc/gtk-2.0/gtkrc)
 license=('LGPL')
 source=(http://ftp.gnome.org/pub/gnome/sources/gtk+/2.19/gtk+-${pkgver}.tar.bz2
         xid-collision-debug.patch)
-sha256sums=('1a38c1f5fec0b850cbfe10714d81adf9d1539730e4cdff72dff79df4bff96aec'
+sha256sums=('466e013b57c52639aebe588229d8706dbbe817b3238af66a524ff5764e62acb7'
             'd758bb93e59df15a4ea7732cf984d1c3c19dff67c94b957575efea132b8fe558')
 
 build() {
