--- a/gvfs/trunk/PKGBUILD
+++ b/gvfs/trunk/PKGBUILD
@@ -2,24 +2,21 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gvfs
-pkgver=1.5.4
-pkgrel=4
+pkgver=1.5.5
+pkgrel=1
 pkgdesc="Userspace virtual filesystem implemented as a pluggable module for gio"
 arch=('i686' 'x86_64')
 license=('LGPL')
-depends=('libsoup-gnome>=2.29.91' 'libcdio>=0.82' 'fuse>=2.8.0' 'bluez>=4.61' 'smbclient>=3.4.5' 'libgphoto2>=2.4.7' 'avahi>=0.6.25' 'libarchive>=2.8.0' 'gnome-disk-utility>=2.29.90')
+depends=('libsoup-gnome>=2.29.91' 'libcdio>=0.82' 'fuse>=2.8.0' 'bluez>=4.61' 'smbclient>=3.5.0' 'libgphoto2>=2.4.7' 'avahi>=0.6.25' 'libarchive>=2.8.0' 'gnome-disk-utility>=2.29.90')
 makedepends=('pkgconfig' 'intltool')
 install=gvfs.install
 url="http://www.gnome.org"
 options=(!libtool)
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.5/${pkgname}-${pkgver}.tar.bz2
-	fix_dbus_service.patch)
-sha256sums=('c7e23851681875a04bd6697657433a204be9e6895a845ca3cb5ee573ca17ab02'
-	    'ee428390392f4c184a4069b3a6955a65ffcafe0c14be053a71cb509eabb409d4')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.5/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('e6c3c54ddbf5be75836e69c6d847500201b1b95b54d9bea8f9f51d2bc9617c8a')
+
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i ${srcdir}/fix_dbus_service.patch || return 1
-  autoreconf -fi || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
       --localstatedir=/var --disable-static \
       --libexecdir=/usr/lib/gvfs \
