update to gnome 2.30rc
git-svn-id: file:///srv/repos/svn-packages/svn@72086 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libwnck/trunk/PKGBUILD
+++ b/libwnck/trunk/PKGBUILD
@@ -1,17 +1,17 @@
 # $Id$
 # Maintainer: Jan de Groot  <jgc@archlinux.org>
 pkgname=libwnck
-pkgver=2.29.91
+pkgver=2.29.92
 pkgrel=1
 pkgdesc="Window Navigator Construction Kit"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('LGPL')
-depends=('gtk2>=2.19.5' 'startup-notification>=0.10' 'libxres')
-makedepends=('pkgconfig' 'libxt>=1.0.6' 'intltool')
+depends=('gtk2>=2.19.7' 'startup-notification>=0.10' 'libxres')
+makedepends=('pkgconfig' 'libxt>=1.0.6' 'intltool' 'gobject-introspection')
 options=('!libtool')
 url="http://www.gnome.org/"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('6aa5755562910a876728cb6e7ff3785416464663b17384cd8579e7c36e500dc1')
+sha256sums=('0e52bac253d387c7ae7ed16a6c0673e01915b89ede7567debef74c9fbd930ab8')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
