--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=nautilus
-pkgver=2.29.91
-pkgrel=2
+pkgver=2.29.92.1
+pkgrel=1
 pkgdesc="The GNOME shell and file manager"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libbeagle>=0.3.9' 'libexif>=0.6.19' 'exempi>=2.1.1' 'gnome-icon-theme>=2.28.0' 'desktop-file-utils' 'gvfs>=1.5.4' 'libunique>=1.1.6' 'gnome-desktop>=2.29.91')
+depends=('libbeagle>=0.3.9' 'libexif>=0.6.19' 'exempi>=2.1.1' 'gnome-icon-theme>=2.29.2' 'desktop-file-utils' 'gvfs>=1.5.5' 'libunique>=1.1.6' 'gnome-desktop>=2.29.92')
 makedepends=('pkgconfig' 'intltool')
 replaces=('gnome-volume-manager')
 url="http://www.gnome.org"
@@ -16,7 +16,7 @@ options=('!libtool' '!emptydirs')
 install=nautilus.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2
         nautilus-condrestart.patch)
-sha256sums=('cde7a3d598e8ccb05e8c39c76fe4da398e095c83e1436c9b2901ea51c72ae69b'
+sha256sums=('f68c83f3f8961b38218667bf6cd6c14e2da0631bf7624585b872aec56805d47f'
             'f825292ef26274d3044272ca9f25095391cc49d30fb0056e7ed7346a1b4d106c')
 
 build() {
