--- a/gstreamer0.10-bad/trunk/PKGBUILD
+++ b/gstreamer0.10-bad/trunk/PKGBUILD
@@ -3,15 +3,15 @@
 
 pkgbase=gstreamer0.10-bad
 pkgname=('gstreamer0.10-bad' 'gstreamer0.10-bad-plugins')
-pkgver=0.10.17
-pkgrel=3
-arch=(i686 x86_64)
+pkgver=0.10.18
+pkgrel=1
+arch=('i686' 'x86_64')
 license=('LGPL' 'GPL')
-makedepends=('pkgconfig' 'gstreamer0.10-base>=0.10.25' 'xvidcore>=1.2.1' 'libdca>=0.0.5' 'bzip2' 'libdc1394>=2.1.0' 'exempi>=2.1.0' 'jack-audio-connection-kit>=0.116.2' 'neon>=0.28.4' 'faac>=1.28' 'libexif>=0.6.17' 'musicbrainz>=2.1.5' 'faad2>=2.7' 'libmms>=0.4' 'libcdaudio>=0.99.12' 'libmpcdec>=1.2.6' 'mjpegtools>=1.9.0' 'libdvdnav>=4.1.3' 'libmodplug>=0.8.7' 'jasper>=1.900.1' 'liblrdf>=0.4.0' 'libofa>=0.9.3' 'soundtouch>=1.4.0' 'libvdpau>=0.3')
+makedepends=('pkgconfig' 'gstreamer0.10-base>=0.10.28' 'xvidcore>=1.2.1' 'libdca>=0.0.5' 'bzip2' 'libdc1394>=2.1.0' 'exempi>=2.1.0' 'jack-audio-connection-kit>=0.116.2' 'neon>=0.28.4' 'faac>=1.28' 'libexif>=0.6.17' 'musicbrainz>=2.1.5' 'faad2>=2.7' 'libmms>=0.4' 'libcdaudio>=0.99.12' 'libmpcdec>=1.2.6' 'mjpegtools>=1.9.0' 'libdvdnav>=4.1.3' 'libmodplug>=0.8.7' 'jasper>=1.900.1' 'liblrdf>=0.4.0' 'libofa>=0.9.3' 'soundtouch>=1.4.0' 'libvdpau>=0.4')
 url="http://gstreamer.freedesktop.org/"
 options=(!libtool !emptydirs)
 source=(${url}/src/gst-plugins-bad/gst-plugins-bad-${pkgver}.tar.bz2)
-md5sums=('c0c3e79430d4441c4825436387d200f4')
+sha256sums=('2f800127e00da0f157358f87b06563b3de23cbc630fbf6295b43405e52e02070')
 
 build() {
   cd "${srcdir}/gst-plugins-bad-${pkgver}"
@@ -26,7 +26,7 @@ build() {
 
 package_gstreamer0.10-bad() {
   pkgdesc="GStreamer Multimedia Framework Bad Plugin libraries (gst-plugins-bad)"
-  depends=('gstreamer0.10-base>=0.10.25')
+  depends=('gstreamer0.10-base>=0.10.28')
   groups=('gstreamer0.10-plugins')
 
   cd "${srcdir}/gst-plugins-bad-${pkgver}"
@@ -35,7 +35,7 @@ package_gstreamer0.10-bad() {
 
 package_gstreamer0.10-bad-plugins() {
   pkgdesc="GStreamer Multimedia Framework Bad Plugins (gst-plugins-bad)"
-  depends=("gstreamer0.10-bad=${pkgver}" 'xvidcore>=1.2.1' 'libdca>=0.0.5' 'bzip2' 'libdc1394>=2.1.0' 'exempi>=2.1.0' 'jack-audio-connection-kit>=0.116.2' 'neon>=0.28.4' 'faac>=1.28' 'libexif>=0.6.17' 'musicbrainz>=2.1.5' 'faad2>=2.7' 'libmms>=0.4' 'libcdaudio>=0.99.12' 'libmpcdec>=1.2.6' 'mjpegtools>=1.9.0' 'libdvdnav>=4.1.3' 'libmodplug>=0.8.7' 'jasper>=1.900.1' 'liblrdf>=0.4.0' 'libofa>=0.9.3' 'libvdpau>=0.3')
+  depends=("gstreamer0.10-bad=${pkgver}" 'xvidcore>=1.2.1' 'libdca>=0.0.5' 'bzip2' 'libdc1394>=2.1.0' 'exempi>=2.1.0' 'jack-audio-connection-kit>=0.116.2' 'neon>=0.28.4' 'faac>=1.28' 'libexif>=0.6.17' 'musicbrainz>=2.1.5' 'faad2>=2.7' 'libmms>=0.4' 'libcdaudio>=0.99.12' 'libmpcdec>=1.2.6' 'mjpegtools>=1.9.0' 'libdvdnav>=4.1.3' 'libmodplug>=0.8.7' 'jasper>=1.900.1' 'liblrdf>=0.4.0' 'libofa>=0.9.3' 'libvdpau>=0.4')
   groups=('gstreamer0.10-plugins')
 
   cd "${srcdir}/gst-plugins-bad-${pkgver}"
