upgpkg: gstreamer0.10-base 0.10.28-1 update to 0.10.28
git-svn-id: file:///srv/repos/svn-packages/svn@72122 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gstreamer0.10-base/trunk/PKGBUILD
+++ b/gstreamer0.10-base/trunk/PKGBUILD
@@ -3,15 +3,15 @@
 
 pkgbase=('gstreamer0.10-base')
 pkgname=('gstreamer0.10-base' 'gstreamer0.10-base-plugins')
-pkgver=0.10.26
+pkgver=0.10.28
 pkgrel=1
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('LGPL')
-makedepends=('pkgconfig' 'gstreamer0.10>=0.10.26' 'liboil>=0.3.16' 'libsm' 'libxv' 'alsa-lib>=1.0.20' 'cdparanoia>=10.2' 'libvisual>=0.4.0' 'libvorbis>=1.2.1rc1' 'libtheora>=1.0' 'pango>=1.26.2' 'udev>=145' 'gobject-introspection')
+makedepends=('pkgconfig' 'gstreamer0.10>=0.10.28' 'liboil>=0.3.16' 'libsm' 'libxv' 'alsa-lib>=1.0.20' 'cdparanoia>=10.2' 'libvisual>=0.4.0' 'libvorbis>=1.2.1rc1' 'libtheora>=1.0' 'pango>=1.26.2' 'udev>=151' 'gobject-introspection')
 options=(!libtool !emptydirs)
 url="http://gstreamer.freedesktop.org/"
 source=(${url}/src/gst-plugins-base/gst-plugins-base-${pkgver}.tar.bz2)
-sha256sums=('e06d48dd58ab29479985bbd84a130cf804c1bf5a43594aeb3eec41a0e9d0dd7e')
+sha256sums=('132b6fd7749fcbfa9ad88c854aada44b6870c4175bda21cdb01a52b59a98e14f')
 
 build() {
   cd "${srcdir}/gst-plugins-base-${pkgver}"
@@ -26,7 +26,7 @@ build() {
 
 package_gstreamer0.10-base() {
   pkgdesc="GStreamer Multimedia Framework Base plugin libraries"
-  depends=('gstreamer0.10>=0.10.25' 'liboil>=0.3.16' 'libsm' 'libxv' 'udev>=145')
+  depends=('gstreamer0.10>=0.10.28' 'liboil>=0.3.16' 'libsm' 'libxv' 'udev>=151')
 
   cd "${srcdir}/gst-plugins-base-${pkgver}"
   make DESTDIR="${pkgdir}" install || return 1
