--- a/gstreamer0.10-good/trunk/PKGBUILD
+++ b/gstreamer0.10-good/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 
 pkgbase=gstreamer0.10-good
 pkgname=('gstreamer0.10-good' 'gstreamer0.10-good-plugins')
-pkgver=0.10.18
+pkgver=0.10.21
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL')
-makedepends=('intltool' 'pkgconfig' 'gstreamer0.10-base>=0.10.26' 'libavc1394>=0.5.3-3' 'hal>=0.5.14' 'libiec61883>=1.2.0' 'aalib>=1.4rc5-5' 'libshout>=2.2.2' 'libdv>=1.0.0' 'esound>=0.2.41' 'flac>=1.2.1' 'gconf>=2.28.0' 'wavpack>=4.50.1' 'taglib>=1.5' 'libsoup-gnome>=2.28.2' 'libv4l>=0.6.0' 'libcaca>=0.99.beta16' 'bzip2' 'gtk2>=2.18.6' 'imlib2>=1.4.2-4')
+makedepends=('intltool' 'pkgconfig' 'gstreamer0.10-base>=0.10.28' 'libavc1394>=0.5.3-3' 'hal>=0.5.14' 'libiec61883>=1.2.0' 'aalib>=1.4rc5-5' 'libshout>=2.2.2' 'libdv>=1.0.0' 'esound>=0.2.41' 'flac>=1.2.1' 'gconf>=2.28.0' 'wavpack>=4.50.1' 'taglib>=1.5' 'libsoup-gnome>=2.28.2' 'libv4l>=0.6.0' 'libcaca>=0.99.beta16' 'bzip2' 'gtk2>=2.18.6' 'imlib2>=1.4.2-4')
 url="http://gstreamer.freedesktop.org/"
 options=(!libtool !emptydirs)
 source=(${url}/src/gst-plugins-good/gst-plugins-good-${pkgver}.tar.bz2
         gst-png14.patch)
-sha256sums=('123b887215613467705aecd6192d333f50cba0f42ef16ccb80e4864f60b24bb9'
+sha256sums=('24445a1cf56302ab4ad5f56055d5c3d81c704b8f9f6875fe78a25d4f72716d22'
             '6528ce748ef57ef1cce084a53785c843504607ee3cd055b6b7752bde8eec171f')
 
 build() {
@@ -29,8 +29,9 @@ build() {
 }
 
 package_gstreamer0.10-good() {
-  depends=('gstreamer0.10-base>=0.10.25' 'bzip2')
+  depends=('gstreamer0.10-base>=0.10.28' 'bzip2')
   pkgdesc="GStreamer Multimedia Framework Good plugin libraries"
+  conflicts=('gstreamer0.10-bad<=0.10.17')
 
   cd "${srcdir}/gst-plugins-good-${pkgver}"
   make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
