--- a/gstreamer0.10-python/trunk/PKGBUILD
+++ b/gstreamer0.10-python/trunk/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gstreamer0.10-python
-pkgver=0.10.17
+pkgver=0.10.18
 pkgrel=1
 pkgdesc="Python bindings for GStreamer 0.10"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('LGPL')
 url="http://gstreamer.freedesktop.org/"
-depends=('pygobject>=2.20.0' 'gstreamer0.10-base>=0.10.25')
+depends=('pygobject>=2.20.0' 'gstreamer0.10-base>=0.10.28')
 makedepends=('pkgconfig')
 options=('!libtool')
 source=(http://gstreamer.freedesktop.org/src/gst-python/gst-python-${pkgver}.tar.bz2)
-md5sums=('3998753de6500ee8c18ce1456df43df6')
+sha256sums=('21a6a13736bd4c2cdcbde7d9c2791f1e47085d161eda84f8ee901bb744ddb897')
 
 build() {
   cd "${srcdir}/gst-python-${pkgver}"
