upgpkg: krusader 2.1.0beta1-1 upstream beta release
git-svn-id: file:///srv/repos/svn-packages/svn@72142 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/krusader/trunk/PKGBUILD
+++ b/krusader/trunk/PKGBUILD
@@ -4,27 +4,30 @@
 # Contributor: Lucien Immink <l.immink@student.fnt.hvu.nl>
 
 pkgname=krusader
-pkgver=2.0.0
-pkgrel=3
+pkgver=2.1.0beta1
+_pkgver=2.1.0-beta1
+pkgrel=1
 pkgdesc="An alternative file manager for KDE resembling Midnight Commander"
 url="http://krusader.sourceforge.net/"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('kdebase-runtime')
-source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz
-	'gcc4.4.patch')
-md5sums=('f80f500a136d549739ad5d4bcab7fa5f'
-         '24c47d5cb967f81e3f90576093163f1e')
+depends=('kdebase-lib')
+makedepends=('cmake' 'automoc4')
+install=${pkgname}.install
+source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${_pkgver}.tar.bz2")
+md5sums=('fa4bf47cc8da451d115afdb5c1feb8af')
 
 build() {
   cd ${srcdir}
-
-  patch -Np0 -i gcc4.4.patch
-
   mkdir build
   cd build
-  cmake ../${pkgname}-${pkgver} \
+  cmake ../${pkgname}-${_pkgver} \
+    -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/build
   make DESTDIR=${pkgdir} install
 }
