upgpkg: qjackctl 0.3.6-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@72154 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qjackctl/trunk/PKGBUILD
+++ b/qjackctl/trunk/PKGBUILD
@@ -3,20 +3,24 @@
 # Contributor: Tobias Kieslich <tobias@archlinux.org>
 
 pkgname=qjackctl
-pkgver=0.3.5
-pkgrel=2
+pkgver=0.3.6
+pkgrel=1
 pkgdesc="A qt based frontend to the jack server (jack-audio-connection-kit)"
+url="http://qjackctl.sourceforge.net/"
 arch=('i686' 'x86_64')
 license=('GPL2')
-depends=('jack-audio-connection-kit' 'qt>=4.5.3-4')
+depends=('jack' 'qt')
 options=('!libtool')
-url="http://qjackctl.sourceforge.net/"
-source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('08792978e822509209728b02d071a757')
+source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz")
+md5sums=('a2f7423124b52c8a7e03e60845f3e2f8')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr
   make || return 1
-  make prefix=${pkgdir}/usr install
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  make prefix=${pkgdir}/usr install || return 1
 }
