upgpkg: gifsicle 1.59-1 Upstream update, Removed libsm depends
git-svn-id: file:///srv/repos/svn-packages/svn@72163 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gifsicle/trunk/PKGBUILD
+++ b/gifsicle/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Frank Peters <frank.peters@comcast.net>
 
 pkgname=gifsicle
-pkgver=1.55
+pkgver=1.59
 pkgrel=1
 pkgdesc="A powerful command-line program for creating, editing, manipulating and getting information about GIF images and animations"
 arch=('i686' 'x86_64')
 url="http://www.lcdf.org/gifsicle/"
 license=('GPL')
-depends=('libsm' 'libx11')
+depends=('libx11')
 source=(http://www.lcdf.org/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('366e63ac0aa4696397cb46a1384fd65a')
-sha1sums=('74e6c25592d95f19ab36012b5a72ff149b53055c')
+md5sums=('e6d21543a37e46e5da181dacf0bf0645')
+sha1sums=('75b813c2bb793ec5c28678b691914cfa35fd13cb')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
