--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,13 +3,14 @@
 
 pkgname=polkit
 pkgver=0.96
-pkgrel=1
+pkgrel=2
 pkgdesc="Application development toolkit for controlling system-wide privileges"
 arch=(i686 x86_64)
 license=('LGPL')
 url="http://www.freedesktop.org/wiki/Software/Policykit"
 depends=('eggdbus>=0.6' 'pam')
 makedepends=('intltool' 'gtk-doc' 'gobject-introspection')
+replaces=('policykit')
 options=('!libtool')
 source=(http://hal.freedesktop.org/releases/${pkgname}-${pkgver}.tar.gz
         polkit.pam)
