upgpkg: aufs2 2.6.37_20110105-1 bump to .37 series
git-svn-id: file:///srv/repos/svn-packages/svn@105327 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aufs2/trunk/PKGBUILD
+++ b/aufs2/trunk/PKGBUILD
@@ -2,25 +2,25 @@
 # Maintainer: Paul Mattal <pjmattal@elys.com>
 
 pkgname=aufs2
-pkgver=2.6.36_20101021
+pkgver=2.6.37_20110105
 pkgrel=1
 #_kernver=${pkgver%_*}-ARCH
-_kernver=2.6.36-ARCH
+_kernver=2.6.37-ARCH
 pkgdesc="Another Unionfs Implementation"
 arch=('i686' 'x86_64')
 url="http://aufs.sourceforge.net/"
 license=('GPL2')
-depends=('kernel26>=2.6.36' 'kernel26<2.6.37')
-makedepends=('kernel26-headers>=2.6.36' 'kernel26-headers<2.6.37')
+depends=('kernel26>=2.6.37' 'kernel26<2.6.38')
+makedepends=('kernel26-headers>=2.6.37' 'kernel26-headers<2.6.38')
 replaces=('aufs')
 install=${pkgname}.install
-source=("ftp://ftp.archlinux.org/other/aufs2/${pkgname}-${pkgver}.tar.gz"
-       aufs2-module-2.6.36.patch)
+source=("ftp://ftp.archlinux.org/other/aufs2/${pkgname}-${pkgver}.tar.gz")
+       #aufs2-module-2.6.36.patch)
 options=('!makeflags')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  patch -Np1 -i ../aufs2-module-2.6.36.patch
+  #patch -Np1 -i ../aufs2-module-2.6.36.patch
   sed -i 's|CONFIG_AUFS_HNOTIFY =.*|CONFIG_AUFS_HNOTIFY = y|' \
      config.mk || return 1
   sed -i 's|CONFIG_AUFS_HFSNOTIFY =.*|CONFIG_AUFS_HFSNOTIFY = y|' \
@@ -41,20 +41,19 @@ build() {
     inot64=""
   fi
   sed -i "s|CONFIG_AUFS_INO_T_64 =.*|CONFIG_AUFS_INO_T_64 =${inot64}|" \
-     config.mk || return 1
+     config.mk 
   # build
-  make KDIR=/usr/src/linux-${_kernver} || return 1
+  make aufs.ko KDIR=/usr/src/linux-${_kernver} 
 }
 
 package() {
   cd ${srcdir}/${pkgname}-${pkgver}
   install -D -m644 fs/aufs/aufs.ko \
-    $pkgdir/lib/modules/${_kernver}/kernel/fs/aufs/aufs.ko || return 1
+    $pkgdir/lib/modules/${_kernver}/kernel/fs/aufs/aufs.ko 
   # tweak the install script for the right kernel version
   sed -i -e "s/KERNEL_VERSION=.*/KERNEL_VERSION=${_kernver}/g" \
-    $startdir/$pkgname.install || return 1
+    $startdir/$pkgname.install 
   # install include files
-  install -D -m 644 include/linux/aufs_type.h $pkgdir/usr/src/linux-$_kernver/include/linux/aufs_type.h || return 1
+  install -D -m 644 include/linux/aufs_type.h $pkgdir/usr/src/linux-$_kernver/include/linux/aufs_type.h 
 }
-md5sums=('9ba0666dc200bebb240ac598f9021d9f'
-         '55aac34dd0aa39458b6d927f4b2bddb8')
+md5sums=('630c9c36bd4c0aa75a12b9bfa01ef8ee')
