upgpkg: kradio 4.0.2-1 bump to latest version
git-svn-id: file:///srv/repos/svn-packages/svn@105372 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kradio/trunk/PKGBUILD
+++ b/kradio/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer : Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=kradio
-pkgver=4.0.1
-pkgrel=2
+pkgver=4.0.2
+pkgrel=1
 arch=('i686' 'x86_64')
 license=('GPL2')
 pkgdesc="KRadio is a comfortable KDE radio application"
@@ -18,7 +18,11 @@ build() {
   mkdir build
   cd build
   cmake ../${pkgname}4-$pkgver -DCMAKE_SKIP_RPATH=ON -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
-  make || return 1
+  make
+}
+
+package() {
+  cd $srcdir/build
   make DESTDIR=$startdir/pkg install
 }
-md5sums=('de7a02b77ae5d960b273f125b17b83bc')
+md5sums=('18fea3e2bc7100882075187c6a89f7bd')
