--- a/libxfce4ui/trunk/PKGBUILD
+++ b/libxfce4ui/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=libxfce4ui
 pkgver=4.7.6
 pkgrel=2
-pkgdesc="share commonly used Xfce widgets among the Xfce applicationsa freedesktop.org compliant ui implementation for Xfce (Development Version)"
+pkgdesc="share commonly used Xfce widgets among the Xfce applications"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
