upgpkg: libxfce4util 4.7.5-2 add it to the xfce4 group
git-svn-id: file:///srv/repos/svn-packages/svn@105432 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libxfce4util/trunk/PKGBUILD
+++ b/libxfce4util/trunk/PKGBUILD
@@ -4,11 +4,12 @@
 
 pkgname=libxfce4util
 pkgver=4.7.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Basic utility non-GUI functions for Xfce"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
+groups=('xfce4')
 depends=("glib2")
 makedepends=('pkgconfig' 'intltool' 'gtk-doc')
 options=('!libtool')
