upgpkg: xdelta3 3.0.0-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@105488 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xdelta3/trunk/PKGBUILD
+++ b/xdelta3/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Henning Garus <henning.garus@gmail.com>
 
 pkgname=xdelta3
-pkgver=3.0z
-pkgrel=2
+pkgver=3.0.0
+pkgrel=1
 pkgdesc="A diff utility which works with binary files"
 arch=('i686' 'x86_64')
 url="http://xdelta.org/"
@@ -14,7 +14,7 @@ makedepends=('python2')
 optdepends=('python2: for python modules')
 source=(http://xdelta.googlecode.com/files/xdelta$pkgver.tar.gz
         xdelta3-makefile.patch)
-md5sums=('2b5b3c33438cff581ce5c12d66c28b6c'
+md5sums=('5fe038be3a266d2a7913e10d1cec6d88'
          '378e9a735d92fb2fc695ed9ce2fad2d5')
 
 build() {
