update to new daily shot source
git-svn-id: file:///srv/repos/svn-packages/svn@105507 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mythes-de/trunk/PKGBUILD
+++ b/mythes-de/trunk/PKGBUILD
@@ -2,15 +2,15 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=mythes-de
-pkgver=20090802
+pkgver=20110109
 pkgrel=1
 pkgdesc="German thesaurus"
 arch=(any)
 url="http://www.openthesaurus.de/"
 license=('LGPL')
 optdepends=('libmythes: offers thesaurus library functions')
-source=(http://www.openthesaurus.de/old/thes_de_DE_v2.zip)
-md5sums=('a6ed5d637045ff7c91a5cd9084bda0a3')
+source=(http://www.openthesaurus.de/export/Deutscher-Thesaurus.oxt)
+md5sums=('24768b14a07d59b543c911684dabdb8d')
 
 build() {
   /bin/true
@@ -36,8 +36,4 @@ package() {
       ln -sv /usr/share/mythes/$(basename $file) .
     done
   popd
-  
-  # docs
-  install -dm755 ${pkgdir}/usr/share/doc/$pkgname
-  cp -p README_th_de_DE_v2.txt $pkgdir/usr/share/doc/$pkgname
 }
