upgpkg: xorg-xdm 1.1.10-2 Replace dependencies by standalone utils (FS#21485)
git-svn-id: file:///srv/repos/svn-packages/svn@105533 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xorg-xdm
 pkgver=1.1.10
-pkgrel=1
+pkgrel=2
 pkgdesc="X Display Manager"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 license=('custom')
-depends=('pam' 'libxaw' 'libxinerama' 'xorg-server-utils' 'libxft')
+depends=('pam' 'libxaw' 'libxinerama' 'xorg-xrdb' 'xorg-sessreg' 'libxft')
 makedepends=('pkgconfig')
 backup=(etc/X11/xdm/Xaccess etc/X11/xdm/Xresources etc/X11/xdm/Xservers etc/X11/xdm/xdm-config etc/pam.d/xdm etc/X11/xdm/Xsetup_0 etc/X11/xdm/Xsession)
 options=('!libtool')
@@ -23,21 +23,21 @@ md5sums=('329383040cdbda5b5c8ce6c7e1120c97'
 
 build() {
   cd "${srcdir}/xdm-${pkgver}"
-  patch -Np0 -i "${srcdir}/Xsession-loginshell.patch" || return 1
-  patch -Np1 -i "${srcdir}/Xsession-xsm.patch" || return 1
+  patch -Np0 -i "${srcdir}/Xsession-loginshell.patch"
+  patch -Np1 -i "${srcdir}/Xsession-xsm.patch"
   ./configure --prefix=/usr \
       --disable-xdm-auth \
       --disable-static \
       --with-xdmconfigdir=/etc/X11/xdm \
       --with-xdmscriptdir=/etc/X11/xdm \
-      --with-pixmapdir=/usr/share/xdm/pixmaps || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+      --with-pixmapdir=/usr/share/xdm/pixmaps
+  make
+  make DESTDIR="${pkgdir}" install
   install -m755 -d "${pkgdir}/var/lib/xdm"
   install -m755 -d "${pkgdir}/etc/pam.d"
-  install -m644 "${srcdir}/xdm.pam" "${pkgdir}/etc/pam.d/xdm" || return 1
+  install -m644 "${srcdir}/xdm.pam" "${pkgdir}/etc/pam.d/xdm"
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
 
-  sed -i -e 's/\/X11R6//g' "${pkgdir}/etc/X11/xdm/"* || return 1
+  sed -i -e 's/\/X11R6//g' "${pkgdir}"/etc/X11/xdm/*
 }
