Change generation of updmap.cfg to a simpler logic, using /tec/texmf/web2c/updmap-local.cfg for customizations.
git-svn-id: file:///srv/repos/svn-packages/svn@105544 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/texlive-fontsextra/trunk/PKGBUILD
+++ b/texlive-fontsextra/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Rémy Oudompheng <remy.archlinux.org>
 
 pkgname=texlive-fontsextra
 pkgver=2010.20923
-pkgrel=1
+pkgrel=2
 pkgdesc="TeX Live - all sorts of extra fonts"
 license=('GPL')
 arch=(any)
