pyqt has been renamed
git-svn-id: file:///srv/repos/svn-packages/svn@105722 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebindings/kde-unstable/PKGBUILD
+++ b/kdebindings/kde-unstable/PKGBUILD
@@ -12,7 +12,7 @@ pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'pyqt' 'kdepim-runtime' 'mono'
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-qt' 'kdepim-runtime' 'mono'
 	'kdegraphics-okular' 'qwt' 'docbook-xsl' 'boost' 'qscintilla' 'ruby')
 source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 sha1sums=('55ce512006f53b31c41675fabe4565b6e4eb4483')
@@ -50,7 +50,7 @@ package_kdebindings-csharp() {
 
 package_kdebindings-python() {
 	pkgdesc='KDE bindings for python'
-	depends=('kdepim-runtime' 'pyqt' 'qscintilla')
+	depends=('kdepim-runtime' 'python2-qt' 'qscintilla')
 	cd $srcdir/build/python
 	make DESTDIR=$pkgdir install
 
