--- a/kdeadmin/kde-unstable/PKGBUILD
+++ b/kdeadmin/kde-unstable/PKGBUILD
@@ -14,7 +14,7 @@ url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeadmin')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebindings-python'
-	    'system-config-printer-common' 'pyqt' 'docbook-xsl')
+	    'system-config-printer-common' 'python2-qt' 'docbook-xsl')
 source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'syslog-path.patch')
 sha1sums=('d5c9bb6fd00f0b3799a5eed5c249a14edf4d2d31'
@@ -70,7 +70,7 @@ package_kdeadmin-kuser() {
 
 package_kdeadmin-system-config-printer-kde() {
 	pkgdesc='Configure local and remote Printers'
-	depends=('kdebindings-python' 'system-config-printer-common' 'pyqt')
+	depends=('kdebindings-python' 'system-config-printer-common' 'python2-qt')
 	url="http://kde.org/applications/system/printerapplet/"
 	cd $srcdir/build/system-config-printer-kde
 	make DESTDIR=$pkgdir install
