--- a/python-sip/trunk/PKGBUILD
+++ b/python-sip/trunk/PKGBUILD
@@ -9,6 +9,7 @@ arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.com/software/sip/"
 license=('custom:"sip"')
 depends=('python' 'gcc-libs')
+conflicts=('python2-sip' 'sip')
 source=("http://www.riverbankcomputing.com/static/Downloads/sip4/sip-${pkgver}.tar.gz")
 md5sums=('8a0998fbaf34bdab2c15af3d4fa3bc0e')
 
