upgpkg: xfce4-mount-plugin 0.5.5-1 update for Xfce 4.8
git-svn-id: file:///srv/repos/svn-packages/svn@105777 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,25 +1,33 @@
 # $Id$
-# Maintainer:
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-mount-plugin
-pkgver=0.5.4
-pkgrel=3
+pkgver=0.5.5
+pkgrel=1
 pkgdesc="plugin for the Xfce4 panel to mount and unmount volumes"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://xfce-goodies.berlios.de/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel')
-makedepends=('pkgconfig' 'perlxml')
+depends=('xfce4-panel' 'libxfcegui4' 'hicolor-icon-theme')
+makedepends=('intltool')
 install=${pkgname}.install
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('06ac87a09993af4624776022be9ffb13')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.5/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('1d237468fe23e4e8c29195d9b99c4c5d')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static
-  make || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
 }
