archrelease: copy trunk to testing-x86_64
git-svn-id: file:///srv/repos/svn-packages/svn@105798 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xfce4-xfapplet-plugin/repos/testing-x86_64/PKGBUILD
+++ b/xfce4-xfapplet-plugin/repos/testing-x86_64/PKGBUILD
@@ -1,5 +1,5 @@
 # $Id$
-# Maintainer: AndyRTR <andyrtr@archlinux.org>
+# Maintainer:
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-xfapplet-plugin
