pass CFLAGS (FS#22401)
git-svn-id: file:///srv/repos/svn-packages/svn@105805 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/python-sip/trunk/PKGBUILD
+++ b/python-sip/trunk/PKGBUILD
@@ -16,7 +16,7 @@ md5sums=('8a0998fbaf34bdab2c15af3d4fa3bc0e')
 build() {
   cd ${srcdir}/sip-${pkgver}
 
-  python configure.py
+  python configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
 }
 
